--- a/ContextMenu/src/main/res/values/style.xml
+++ b/ContextMenu/src/main/res/values/style.xml
@@ -27,5 +27,8 @@
         <item name="android:gravity">center|start</item>
         <item name="android:padding">0dp</item>
         <item name="android:textColor">@color/text_color</item>
+        <item name="android:clickable">false</item>
+        <item name="android:focusable">false</item>
+        <item name="android:focusableInTouchMode">false</item>
     </style>
 </resources>
